# ModularwxApp

./: BasisProject.cmake  CMakeLists.txt  LICENSE.md  README.md
CMake/: BasisBootstrapping.cmake  SuperBuild.cmake  SuperBuildDRAMMS.txt
CMake/Config/: Depends.cmake  Settings.cmake
FrameWorks/ApplicationFW/: BasisProject.cmake
FrameWorks/ApplicationFW/modules/wxModularApplication/: BasisProject.cmake
FrameWorks/ApplicationFW/modules/wxModularApplication/config/: Settings.cmake  Settings.cmake.old
FrameWorks/ApplicationFW/modules/wxModularApplication/src/: CMakeLists.txt  GuiCentralPanel.cpp  MainFrame.cpp  ReferencePluginManager.cpp  wxModularHostApp.cpp
FrameWorks/ApplicationFW/modules/wxModularApplication/src/PrivateHeaders/: GuiCentralPanel.h  MainFrame.h  ReferencePluginManager.h  wxModularHostApp.h
FrameWorks/ApplicationFW/modules/wxModularCore/: BasisProject.cmake  CMakeLists.txt
FrameWorks/ApplicationFW/modules/wxModularCore/config/: Settings.cmake
FrameWorks/ApplicationFW/modules/wxModularCore/include/wxModularCore/: wxModularCore.h  wxModularCoreSettings.h
FrameWorks/ApplicationFW/modules/wxModularCore/src/: CMakeLists.txt  wxModularCore.cpp  wxModularCoreSettings.cpp
FrameWorks/BaseWindowImpl/: BasisProject.cmake
FrameWorks/BaseWindowImpl/config/: BasisBootstrapping.cmake  Settings.cmake
FrameWorks/BaseWindowImpl/modules/windowBaseImpl/: BasisProject.cmake
FrameWorks/BaseWindowImpl/modules/windowBaseImpl/config/: Settings.cmake
FrameWorks/BaseWindowImpl/modules/windowBaseImpl/include/windowBaseImpl/: GuiCustomEvent.h  wxGuiPluginWindowBase.h  wxGuiWinBaseExports.h
FrameWorks/BaseWindowImpl/modules/windowBaseImpl/src/: CMakeLists.txt  GuiCustomEvent.cpp  wxGuiPluginWindowBase.cpp
FrameWorks/PluginItf/: BasisProject.cmake  CMakeLists.txt
FrameWorks/PluginItf/modules/wxGuiPluginItf/: BasisProject.cmake  CMakeLists.txt
FrameWorks/PluginItf/modules/wxGuiPluginItf/config/: Settings.cmake
FrameWorks/PluginItf/modules/wxGuiPluginItf/include/PluginItf/: wxGuiPluginBase.h  wxGuiPluginBaseExports.h
FrameWorks/PluginItf/modules/wxGuiPluginItf/src/: CMakeLists.txt  wxGuiPluginBase.cpp
FrameWorks/PluginItf/modules/wxNonGuiPluginItf/: BasisProject.cmake  CMakeLists.txt
FrameWorks/PluginItf/modules/wxNonGuiPluginItf/config/: Settings.cmake
FrameWorks/PluginItf/modules/wxNonGuiPluginItf/include/Plugins/: wxNonGuiPluginBase.h  wxNonGuiPluginExports.h
FrameWorks/PluginItf/modules/wxNonGuiPluginItf/src/: CMakeLists.txt  wxNonGuiPluginBase.cpp
FrameWorks/Plugins/: BasisProject.cmake  CMakeLists.txt
FrameWorks/Plugins/modules/GuiPlugin1/: BasisProject.cmake  CMakeLists.txt
FrameWorks/Plugins/modules/GuiPlugin1/config/: Settings.cmake
FrameWorks/Plugins/modules/GuiPlugin1/include/Plugins/: GuiPlugin1.h  GuiPlugin1dllExp.h  GuiPluginWindow1.h
FrameWorks/Plugins/modules/GuiPlugin1/src/: CMakeLists.txt  GuiPlugin1.cpp  GuiPlugin1Exports.cpp  GuiPluginWindow1.cpp
FrameWorks/Plugins/modules/GuiPlugin2/: BasisProject.cmake
FrameWorks/Plugins/modules/GuiPlugin2/config/: Settings.cmake
FrameWorks/Plugins/modules/GuiPlugin2/include/Plugins/: GuiPlugin2.h  GuiPlugin2dllExp.h  GuiPluginWindow2.h
FrameWorks/Plugins/modules/GuiPlugin2/src/: CMakeLists.txt  GuiPlugin2.cpp  GuiPlugin2Exports.cpp  GuiPluginWindow2.cpp
FrameWorks/Plugins/modules/GuiPropertyViewer/: BasisProject.cmake
FrameWorks/Plugins/modules/GuiPropertyViewer/config/: Settings.cmake
FrameWorks/Plugins/modules/GuiPropertyViewer/include/Plugins/: GuiPVPlugindllExp.h  GuiPropViewerPlugin.h  GuiPropertyPanel.h
FrameWorks/Plugins/modules/GuiPropertyViewer/src/: CMakeLists.txt  GuiPVPluginExports.cpp  GuiPropViewerPlugin.cpp  GuiPropertyPanel.cpp
FrameWorks/Plugins/modules/NonGuiPlugin/: BasisProject.cmake
FrameWorks/Plugins/modules/NonGuiPlugin/config/: Settings.cmake
FrameWorks/Plugins/modules/NonGuiPlugin/include/Plugins/: NonGuiPlugin.h  NonGuiPlugindllExp.h
FrameWorks/Plugins/modules/NonGuiPlugin/src/: CMakeLists.txt  NonGuiPlugin.cpp  NonGuiPluginExports.cpp
include/Common/: stdwx.h
